# git-igor

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CPackConfig.cmake  ccc.cbp  ccc.cpp  ccc.layout  commandline.cpp  commandline.h  git-igor.cpp  gitkit.cpp  gkassert.h  mainwin.cpp  mainwin.h  make.py
backend/: CMakeLists.txt  actions.cpp  actions.h  backend.cpp  backend.h  diff.cpp  diff.h  gitprocess.cpp  gitprocess.h  includes.h  repository.cpp  repository.h  repositorymanager.cpp  repositorymanager.h  runaction.cpp  runaction.h  runner.cpp  runner.h
backend/diff/: context.cpp  context.h  diff.cpp  diff.h  line.cpp  line.h
backend/git/: logger.cpp  logger.h  process.cpp  process.h
cmake/: Qt.cmake
data/: convert.sh
data/res/js/: history.html  history.js  staging.html  staging.js
data/res/styles/: standard.qss
interface/: CMakeLists.txt  backend.cpp  backend.h  diff_io.cpp  diff_io.h  diff_view.cpp  diff_view.h  history_io.cpp  history_io.h  history_view.cpp  history_view.h  includes.h  progress.cpp  progress.h  repo_add.cpp  repo_add.h  repositories.cpp  repositories.h  staging.cpp  staging.h  view.cpp  view.h
interface/diff/: io.cpp  io.h  view.cpp  view.h
interface/history/: io.cpp  io.h  view.cpp  view.h
interface/staging/: view.cpp  view.h
preferences/: preferences.cpp  preferences.h
